--- a/style.css
+++ b/style.css
@@ -10,21 +10,57 @@
     line-height: 1.5;
 }
 
-button {
-    cursor: pointer;
-    background: none;
-    border: none;
-    color: inherit;
-}
-
 body {
     font-family: "Open-Sans", sans-serif;
     text-align: center;
 }
 
-.title {
-  border: 2px solid black;
+#title {
+  font-size: 2.5rem;
   width: 90%;
+}
+
+#welcome-page-slogan {
+  font-size: 1.5rem;
+  width: 50%;
+}
+
+#welcome-page-description {
+  font-size: 1rem;
+  width: 70%;
+}
+
+/* Utility styles */
+
+.container {
+  border: 2px solid black;
   border-radius: 15px;
   margin: 20px auto;
+}
+
+button {
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: inherit;
+    border: 3px solid none;
+    padding: 5px 10px;
+    background-color: hsl(0, 0%, 50%);
+    border-radius: 5px;
+    width: 100px;
+    font-weight: bold;
+    font-size: .8rem;
+}
+
+button:hover {
+  background-color: hsl(0, 0%, 70%);;
+}
+
+button:active {
+  background-color: hsl(0, 0%, 90%);;
+}
+
+li {
+  list-style: none;
+  line-height: 2;
 }
