--- a/style.css
+++ b/style.css
@@ -13,20 +13,25 @@
 body {
     font-family: "Open-Sans", sans-serif;
     text-align: center;
+    background-image: linear-gradient(rgb(28, 126, 28), hsl(108, 89%, 34%));
+    height: 100vh;
 }
 
 #title {
   font-size: 2.5rem;
+  font-weight: 700;
   width: 90%;
 }
 
 #welcome-page-slogan {
   font-size: 1.5rem;
+  font-weight: 600;
   width: 50%;
 }
 
 #welcome-page-description {
   font-size: 1rem;
+  font-weight: 600;
   width: 70%;
   height: 350px;
   padding-top: 30px;
@@ -38,6 +43,13 @@ body {
   margin: 90px auto;
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin: 5px auto;
+  font-size: small;
+}
 /* Utility styles */
 
 .container {
@@ -54,7 +66,7 @@ button {
     color: inherit;
     border: 3px solid none;
     padding: 5px 10px;
-    background-color: hsl(0, 0%, 50%);
+    background-color: hsl(0, 0%, 70%);
     border-radius: 5px;
     width: 100px;
     font-weight: bold;
@@ -62,7 +74,7 @@ button {
 }
 
 button:hover {
-  background-color: hsl(0, 0%, 70%);;
+  background-color: hsl(0, 0%, 80%);;
 }
 
 button:active {
