Feat: Add score reset to resetGame function and fix issue with results div not displaying correctly

--- a/style.css
+++ b/style.css
@@ -87,18 +87,10 @@ body {
 
 /* hidden result classes */
 
-#result {
+#result-area {
   margin: auto;
   font-size: 2rem;
   transition: all 0.5s linear;
-}
-
-.correct {
-  color: blue;
-}
-
-.incorrect {
-  color: red;
 }
 
 /* Footer section */
