--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ body {
     background-size: cover;
     overflow: hidden;
     height: 100vh;
+    color: #ffffff;
 }
 
 #title {
   font-size: 2.5rem;
   background: linear-gradient(#1d831d, #082a08);;
-  color: white;
   font-weight: 700;
   width: 90%;
 }
@@ -33,7 +33,6 @@ body {
 
 #welcome-page-slogan {
   background: linear-gradient(#1d831d, #082a08);;
-  color: white;
   font-size: 1.5rem;
   font-weight: 600;
   width: 50%;
@@ -41,7 +40,6 @@ body {
 
 #welcome-page-description {
   background: linear-gradient(#1d831d, #082a08);  font-size: 1rem;
-  color: white;
   font-weight: 600;
   width: 70%;
   height: 350px;
@@ -59,7 +57,6 @@ body {
 #game-page-container {
   border: 2px solid black;
   background: linear-gradient(#1d831d, #082a08);
-  color: white;
   width: 70%;
   height: 430px;
   margin: 20px auto 0;
